syntax = "proto3";

package geosmb.authorization.errors;

message Error {
  enum ERROR_CODE {
    UNKNOWN = 0;
    NOT_FOUND = 1;
    BAD_PROTO = 2;
    CONFLICT = 3;
    VALIDATION_FAILED = 4;
  }

  ERROR_CODE code = 1;
  string message = 2;
}
